--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -6,6 +6,13 @@
 
 	}
 
+	#banner {
+	background-image: url(../images/hero-desktop.jpg);
+	background-repeat: no-repeat;
+	background-color: #fff;
+	height: 200px;
+}
+
 	nav ul li a {
 		transition: background .3s linear;
 	}
