--- a/public/templates/homeTmpl.html
+++ b/public/templates/homeTmpl.html
@@ -1,4 +1,5 @@
 <div id='contentWrapper'>
+<div id='icon'></div>
 <div class='row'>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
