added more styling and images

--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -1,17 +1,18 @@
 @media only screen and (min-width: 1141px) {
 
-	header, nav, .row, footer {
+	header, nav, .row, footer, #banner {
 		max-width: 1140px;
 		margin: 0 auto;
 
 	}
 
 	#banner {
-	background-image: url(../images/hero-desktop.jpg);
-	background-repeat: no-repeat;
-	background-color: #fff;
-	height: 200px;
-}
+	background-image: url(../images/hero1.2-desktop.jpg);
+	background-position: center;
+	height: 500px;
+	}
+
+	
 
 	nav ul li a {
 		transition: background .3s linear;
