--- a/public/templates/homeTmpl.html
+++ b/public/templates/homeTmpl.html
@@ -8,23 +8,25 @@
 
 <div class='row'>
 <div class='column-6'>
-<p> LEFT Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>HI I am ladd mauigoa. Been through a lot lately. I have a degree in biotechnology. I was going to go to dental school,but I lost passion for it. One thing I have always liked was technology. So I dabbled a little bit in html and css. Found out I really liked it. So I went and took a dev bootcamp. I absolutely loved it! It was hard but I loved what I was learning and I loved the people I was around. I now find myself not having the time to keep learning! There is so much to do!
+</p>
+<br>
+<p> I love being able to code and make a web app from scratch with the mean stack. I use a javascript full stack. I started with javascript as a beginning language. Now I want to move onto more of a low level programming language soon after I have learned a little more of testing.</p>
 </div> <!-- end of column-6 -->
 
 
 
 <div class='column-6'>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<ul class='skills'>
+	<li> Javascript </li>
+	<li> HTML5 </li>
+	<li> CSS </li>
+	<li> Angular </li>
+	<li> Node.js </li>
+	<li> MongoDB </li>
+	<li> Express </li>
+	<li> Jquery </li>
+</ul>
 </div> <!-- end of column-6 -->
 </div> <!-- end of row -->
 
