more css to choose from

--- a/public/templates/homeTmpl.html
+++ b/public/templates/homeTmpl.html
@@ -63,7 +63,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div> <!-- end of column-3 -->
 
 <div class='column-6'>
-<div class='color-2'
+<div class='color-2'>
 <p> middle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 </p>
