--- a/public/stylesheets/phone-default.css
+++ b/public/stylesheets/phone-default.css
@@ -47,7 +47,7 @@ header h2 {
 
 
 /*----- NAVIGATION STUFF HERE ------*/
-#navWrapper {
+/*#navWrapper {
 	background-color: #A62F03;
 	padding: .75em 2%;
 }
@@ -91,7 +91,7 @@ nav ul li:first-child a {
 
 nav ul li.active a {
 	color: #ff7200;
-}
+}*/
 
 /*----- CONTENT ------*/
 
@@ -181,6 +181,44 @@ footer a {
 	display: table;
 	clear: both;
 }
+
+
+
+
+
+
+
+
+/*-----NAVIGATION -----*/	
+#navWrapper {
+	background-color: #e22121;	
+}
+nav ul li {
+	float: left;
+	width: 25%;	
+}
+
+nav ul li a {
+	display: block;
+	font-size: .9em;
+	font-weight:600;
+	color: #fff;
+	text-decoration:none;
+	margin: .6em 0;
+	border-right: 3px solid rgba(255,255,255,0.3);
+	text-align: center;
+}	
+/*this turns off the last border*/
+nav ul li:last-child a {
+	border-right: none;
+}
+
+
+
+
+
+
+
 
 /*nav ul {
 	padding: .5em 0;
