--- a/public/templates/homeTmpl.html
+++ b/public/templates/homeTmpl.html
@@ -1,22 +1,20 @@
 <div id='contentWrapper'>
 
-<div class='row'>
-<div class='column-12'>
-<h1> About Me </h1>
-</div> <!-- end of column-12 -->
-</div> <!-- end of row -->
 
 <div class='row'>
+
 <div class='column-6'>
-<p>HI I am ladd mauigoa. Been through a lot lately. I have a degree in biotechnology. I was going to go to dental school,but I lost passion for it. One thing I have always liked was technology. So I dabbled a little bit in html and css. Found out I really liked it. So I went and took a dev bootcamp. I absolutely loved it! It was hard but I loved what I was learning and I loved the people I was around. I now find myself not having the time to keep learning! There is so much to do!
-</p>
+<h1 class='titles'> About me </h1>
+<p class='aboutPara'>HI I am ladd mauigoa. Been through a lot lately. I have a degree in biotechnology. I was going to go to dental school,but I lost passion for it. One thing I have always liked was technology. So I dabbled a little bit in html and css. Found out I really liked it. So I went and took a dev bootcamp. I absolutely loved it! It was hard but I loved what I was learning and I loved the people I was around. I now find myself not having the time to keep learning! There is so much to do!
+
 <br>
-<p> I love being able to code and make a web app from scratch with the mean stack. I use a javascript full stack. I started with javascript as a beginning language. Now I want to move onto more of a low level programming language soon after I have learned a little more of testing.</p>
+<br>
+ I love being able to code and make a web app from scratch with the mean stack. I use a javascript full stack. I started with javascript as a beginning language. Now I want to move onto more of a low level programming language soon after I have learned a little more of testing.</p>
 </div> <!-- end of column-6 -->
 
 
-
 <div class='column-6'>
+<h1 class='titles'>Skills</h1>
 <ul class='skills'>
 	<li> Javascript </li>
 	<li> HTML5 </li>
@@ -29,6 +27,7 @@
 </ul>
 </div> <!-- end of column-6 -->
 </div> <!-- end of row -->
+
 
 <div class='row'>
 <div class='column-4'>
