--- a/public/templates/homeTmpl.html
+++ b/public/templates/homeTmpl.html
@@ -5,17 +5,14 @@
 
 <div class='column-6'>
 <h1 class='titles'> About me </h1>
-<p class='aboutPara'>HI I am ladd mauigoa. Been through a lot lately. I have a degree in biotechnology. I was going to go to dental school,but I lost passion for it. One thing I have always liked was technology. So I dabbled a little bit in html and css. Found out I really liked it. So I went and took a dev bootcamp. I absolutely loved it! It was hard but I loved what I was learning and I loved the people I was around. I now find myself not having the time to keep learning! There is so much to do!
-
-<br>
-<br>
- I love being able to code and make a web app from scratch with the mean stack. I use a javascript full stack. I started with javascript as a beginning language. Now I want to move onto more of a low level programming language soon after I have learned a little more of testing.</p>
+<p class='aboutPara'>Thanks for stopping by! My Name is Ladd. I am a JavaScript Web developer utilizing the MEAN stack. I love learning and solving problems. BBQ's are good too.
+</p>
 </div> <!-- end of column-6 -->
 
 
 <div class='column-6'>
-<h1 class='titles'>Skills</h1>
-<ul class='skills'>
+<h1 class='titles'>Technical Skills</h1>
+<ul class='skills clearfix'>
 	<li> Javascript </li>
 	<li> HTML5 </li>
 	<li> CSS </li>
@@ -24,6 +21,10 @@
 	<li> MongoDB </li>
 	<li> Express </li>
 	<li> Jquery </li>
+	<li> React </li>
+	<li> Responsive Design </li>
+	<li> Firebase </li>
+	<li> Git </li>
 </ul>
 </div> <!-- end of column-6 -->
 </div> <!-- end of row -->
