--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -14,16 +14,17 @@
 
 	
 
+	nav ul {
+		padding-left: 1%;
+	}
 	nav ul li a {
 		transition: background .3s linear;
+		padding: .2em 1.5em;
 	}
 
 	nav ul li a:hover {
-		background-color: rgba(0,0,0,0.4);
-		
+		background-color: rgba(0,0,0,0.4);	
 	}
 
-	h1 {
-	color: silver;
-}
+
 }
