--- a/public/templates/projectsTmpl.html
+++ b/public/templates/projectsTmpl.html
@@ -1,5 +1,9 @@
 <div id='contentWrapper'>
 <div class='row'>
-	
+<h1> Coming soon ...</h1>
+	<div class= 'column-12'>
+		<div id='fotoverse'></div>
+		<p class='projectP'> used the mean stack and react!</p>
+	</div> <!-- end of column -->
 </div> <!-- end of row -->
 </div> <!-- end of the content wrapper -->
