--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -14,11 +14,18 @@
 nav ul li a br {display: none;}
 
 /*---- CONTENT -----*/
+#fotoverse {
+	background-image: url(../images/fotoverse-tablet.jpg);
+	height: 400px;
+}
 
 /*---- COLUMNS -----*/
 
 .column-6, .column-4, .column-3 {
 	float: left;
+}
+.column-12{
+	width: 100%;
 }
 .column-6 {
 	width: 50%;
