--- a/public/templates/hobbiesTmpl.html
+++ b/public/templates/hobbiesTmpl.html
@@ -1,5 +1,17 @@
 <div id='contentWrapper'>
 <div class='row'>
-	
+	<div class='column-6'>
+<h1 class='titles'>I love to ...</h1>
+<ul class='skills clearfix'>
+	<li> Go fishing </li>
+	<li> Paintball </li>
+	<li> Watch movies </li>
+	<li> Mountain Bike </li>
+	<li> Lift weights bro </li>
+	<li> Wear Oakleys </li>
+	<li> Try new foods </li>
+</ul>
+</div> <!-- end of column-6 -->
+</div> <!-- end of row -->
 </div> <!-- end of row -->
 </div> <!-- end of the content wrapper -->
