more html and contact info

--- a/public/templates/contactTmpl.html
+++ b/public/templates/contactTmpl.html
@@ -1,5 +1,12 @@
 <div id='contentWrapper'>
 <div class='row'>
-	
+
+<div class='column-6'>
+<h1>If you have any projects or questions please feel free to contact me</h1>
+<br>
+<div>
+	<h2 class='contactInfo'>laddmauigoa@gmail.com|8017352199|Orem, Utah
+</div>
+</div>	
 </div> <!-- end of row -->
 </div> <!-- end of the content wrapper -->
