--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -19,6 +19,10 @@ nav ul li a br {display: none;}
 	height: 400px;
 }
 
+.column-6 .hobbies{
+	float: none;
+	margin: 0 auto;
+}
 /*---- COLUMNS -----*/
 
 .column-6, .column-4, .column-3 {
